# unusable_eve_tradeworks

./: .gitignore  Cargo.toml  README.md  auth  auth.json  example.common.json  example.config.json  type-lines.sh
src/: auth.rs  cached_data.rs  cli.rs  commands.rs  config.rs  consts.rs  datadump_service.rs  error.rs  good_items.rs  helper_ext.rs  item_type.rs  items_list.rs  items_prices.rs  lib.rs  load_create.rs  logger.rs  main.rs  order_ext.rs  paged_all.rs  requests.rs  retry.rs  stat.rs  system_interaction.rs  zkb.rs
src/auth/: models.rs
src/good_items/: help.rs  items_prices.rs  sell_buy.rs  sell_reprocess.rs  sell_sell.rs  sell_sell_zkb.rs  station_trading.rs
src/requests/: error.rs  item_history.rs  paged_all.rs  requests.rs  retry.rs  service.rs  transactions.rs
src/zkb/: killmails.rs  requests.rs  zkb_requests.rs
