[package]
name = "unusable_eve_tradeworks"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_eveonline_esi = { git = "https://github.com/LokiVKlokeNaAndoke/rust_eveonline_esi" }
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.29"
serde = { version = "1.0.130", features = ["derive"] }
rmp-serde = "0.15.5"
futures = "0.3.17"
chrono = { version = "0.4.19", features = ["serde"] }
itertools = "0.10.1"
serde_json = "1.0.67"
base64 = "0.13.0"
jsonwebtoken = "7.2.0"
term-table = "1.3.1"
ordered-float = "2.8.0"

[dependencies.reqwest]
version = "0.11.4"
features = ["json", "multipart", "default-tls"]
