[package]
name = "unusable_eve_tradeworks"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_eveonline_esi = { git = "https://github.com/LokiVKlokeNaAndoke/rust_eveonline_esi" }
tokio = { version = "1.11", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15"
futures = { version = "0.3", default-features = false, features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.10"
serde_json = "1.0"
base64 = "0.13"
jsonwebtoken = "7.2"
term-table = "1.3"
ordered-float = "2.8"
fern = "0.6"
log = "0.4"
num-traits = "0.2"

[dependencies.reqwest]
version = "0.11.4"
features = ["json", "multipart", "default-tls"]
