[package]
name = "unusable_eve_tradeworks"
version = "0.1.0"
edition = "2021"
default-run = "unusable_eve_tradeworks"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_eveonline_esi = { git = "https://github.com/LokiVKlokeNaAndoke/rust_eveonline_esi" }
tokio = { version = "1.11", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.0"
futures = { version = "0.3", default-features = false, features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.12.0"
serde_json = "1.0"
base64 = "0.21.0"
jsonwebtoken = "9.2.0"
term-table = "1.3"
ordered-float = "4.2.0"
fern = "0.6"
log = "0.4"
num-traits = "0.2"
clap = "4.1.8"
oauth2 = { version = "4.1", default-features = false, features = ["reqwest"] }
tiny_http = "0.12.0"
rusqlite = "0.30.0"
bzip2 = "0.4"
good_lp = { version = "1.3", features = [
    "coin_cbc",
    "singlethread-cbc",
], default-features = false }
num-format = "0.4.4"
anyhow = "1.0.69"
rayon = "1.7.0"
copypasta = "0.10.0"
cmd_lib = "1.9.3"
interprocess = "1.2.1"
rand = "0.8.5"

[dependencies.reqwest]
version = "0.11.4"
features = ["json", "multipart", "default-tls", "gzip"]

[lib]
name = "unusable_eve_tradeworks_lib"
path = "src/lib.rs"

[[bin]]
name = "unusable_eve_tradeworks"
path = "src/bin/main.rs"

[[bin]]
name = "unusable_eve_tradeworks_hotkey_trigger"
path = "src/bin/hotkey_trigger.rs"


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
# lto = "thin"
# debug = true

[profile.bench]
# lto = "thin"
debug = true
